--- a/styles.css
+++ b/styles.css
@@ -71,3 +71,28 @@
   font-weight: var(--fw-400);
   line-height: 18px;
 }
+
+/* Reset & general styles */
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+body {
+  font-family: "Rubik", sans-serif;
+  background-color: var(--navy-950);
+  margin-inline: var(--spacing-300);
+}
+
+/* Profile styles */
+.wrapper {
+  border: 1px solid red;
+}
