--- a/styles.css
+++ b/styles.css
@@ -32,43 +32,43 @@
 /* Typography classes */
 .text-1-light {
   font-size: 3.5rem;
-  font-weight: var(--fw-300);
+  font-weight: var(--fw-light);
   line-height: 66px;
 }
 
 .text-2-light {
   font-size: 2.5rem;
-  font-weight: var(--fw-300);
+  font-weight: var(--fw-light);
   line-height: 47px;
 }
 
 .text-3-light {
   font-size: 2rem;
-  font-weight: var(--fw-300);
+  font-weight: var(--fw-light);
   line-height: 38px;
 }
 
 .text-4-light {
   font-size: 1.5rem;
-  font-weight: var(--fw-300);
+  font-weight: var(--fw-light);
   line-height: 28px;
 }
 
 .text-5-medium {
   font-size: 1.125rem;
-  font-weight: var(--fw-500);
+  font-weight: var(--fw-medium);
   line-height: 21px;
 }
 
 .text-5-regular {
   font-size: 1.125rem;
-  font-weight: var(--fw-400);
+  font-weight: var(--fw-regular);
   line-height: 21px; 
 }
 
 .text-6-regular {
   font-size: 0.9375rem;
-  font-weight: var(--fw-400);
+  font-weight: var(--fw-regular);
   line-height: 18px;
 }
 
@@ -89,10 +89,40 @@ img {
 body {
   font-family: "Rubik", sans-serif;
   background-color: var(--navy-950);
-  margin-inline: var(--spacing-300);
+  padding-block: 5rem;
+  padding-inline: var(--spacing-300);
 }
 
 /* Profile styles */
-.wrapper {
+/* .wrapper {
   border: 1px solid red;
+} */
+
+.profile {
+  background-color: var(--navy-900);
+  overflow: clip;
+}
+
+.profile-info {
+  display: flex;
+  align-items: center;
+  gap: var(--spacing-300);
+  background-color: var(--purple-600);
+  color: var(--white);
+  margin-block-end: var(--spacing-300);
+  padding-block: var(--spacing-400);
+  padding-inline: var(--spacing-400);
+  border-radius: 0.9375rem;
+}
+
+.profile-image {
+  width: 4rem;
+  border-radius: 50%;
+  border: 3px solid var(--white);
+}
+
+.profile-name span {
+  display: block;
+  color: var(--navy-200);
+  margin-block-end: var(--spacing-100);
 }
